--- a/client/index.html
+++ b/client/index.html
@@ -17,10 +17,10 @@
                     <nav class="nav-extended">
                         <div class="nav-content purple darken-4 row">
                           <ul class="tabs tabs-transparent col s8">
-                            <li class="tab"><a id="sort-all" class="sort">All</a></li>
-                            <li class="tab"><a id="sort-day" class="sort">Day</a></li>
-                            <li class="tab"><a id="sort-week" class="sort">Week</a></li>
-                            <li class="tab"><a id="sort-month" class="sort">Month</a></li>
+                            <li class="tab"><a id="filter-all" class="sort">All</a></li>
+                            <li class="tab"><a id="filter-day" class="sort">Day</a></li>
+                            <li class="tab"><a id="filter-week" class="sort">Week</a></li>
+                            <li class="tab"><a id="filter-month" class="sort">Month</a></li>
                           </ul>
                           <ul class="right col s3">
                             <div class="input-field">
