убраны столбики дублирующегося кода

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
                 <div>
                     <nav class="nav-extended">
                         <div class="nav-content purple darken-4 row">
-                          <ul class="tabs tabs-transparent col s8">
+                          <ul class="tabs tabs-transparent col s8" id="filter">
                             <li class="tab"><a id="filter-all" class="sort">All</a></li>
                             <li class="tab"><a id="filter-day" class="sort">Day</a></li>
                             <li class="tab"><a id="filter-week" class="sort">Week</a></li>
