--- a/client/index.html
+++ b/client/index.html
@@ -68,6 +68,7 @@
     </div>
     
     <script src="index.js"></script>
+    <script src="filter.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
